--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Maron Admin UI</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Maron Admin UI</title>
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="home">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">Maron Admin UI</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav">
-            <li class="navbar-item px-2">
-              <a href="index.html " class="nav-link active">Dashboard</a>
-            </li>
-            <li class="navbar-item px-2">
-                <a href="posts.html " class="nav-link">Posts</a>
-            </li>
-            <li class="navbar-item px-2">
-                <a href="categories.html " class="nav-link">Categories</a>
-            </li>
-            <li class="navbar-item px-2">
-                <a href="users.html " class="nav-link">Users</a>
-            </li>
-              
-          </ul>
+
+<body>
+  <!--Navbar Section-->
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">Maron Admin UI</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="navbar-item px-2">
+            <a href="index.html " class="nav-link active">Dashboard</a>
+          </li>
+          <li class="navbar-item px-2">
+            <a href="posts.html " class="nav-link">Posts</a>
+          </li>
+          <li class="navbar-item px-2">
+            <a href="categories.html " class="nav-link">Categories</a>
+          </li>
+          <li class="navbar-item px-2">
+            <a href="users.html " class="nav-link">Users</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown mr-3">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-user"></i> Welcome Maron
+            </a>
+            <div class="dropdown-menu">
+              <a href="profile.html" class="dropdown-item">
+                <i class="fa fa-user-circle"></i> Profile
+              </a>
+              <a href="settings.html" class="dropdown-item">
+                <i class="fa fa-gear"></i> Settings
+              </a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a href="login.html" class="nav-link">
+              <i class="fa fa-user-times"></i> Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--/Navbar Section-->
+
+  <!--Header Section-->
+  <header id="main-header" class="py-2 bg-primary text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>
+            <i class="fa fa-gear"></i> Dashboard</h1>
         </div>
       </div>
-    </nav>
-    <!-- footer section -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    </div>
+  </header>
+  <!--/Header Section-->
+
+  <!--Actions-->
+  <section id="actions" class="py-4 mb-4 bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <a href="#" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addPostModel">
+            <i class="fa fa-plus"></i> Add Post
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#" class="btn btn-success btn-block" data-toggle="modal" data-target="#addCategoryModel">
+            <i class="fa fa-plus"></i> Add Category
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#" class="btn btn-warning btn-block" data-toggle="modal" data-target="#addUserModel">
+            <i class="fa fa-plus"></i> Add User
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/Actions-->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
